changes #1416 : stretched pictures issue going on

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -1232,9 +1232,11 @@ g path:hover {
 		float: left;
 		margin-right: 20px;
 		min-height: 240px;
+		> a {
+			height:150px;
+		}
 		img {
 			width: 100%;
-			height: 150px;
 		}
 	}
 }
